istio-peerauthentication.yaml

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default # Apply to your application namespace
spec:
  mtls:
    mode: STRICT
