schema-registry.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: kafka
  labels:
    app: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      labels:
        app: schema-registry
    spec:
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:7.6.1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: kafka
  labels:
    app: schema-registry
spec:
  ports:
    - port: 8081
      targetPort: 8081
  selector:
    app: schema-registry
